--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -64,20 +64,9 @@
   margin-bottom: 30px;
   text-align: right;
 }
-.ncpi .pi-list-single-button-content .pi-select tar label {
+.ncpi .pi-list-single-button-content .pi-select label {
   font-size: 12px;
   color: #425466;
-}
-.ncpi .pi-list-single-button-content .pi-select select {
-  width: auto;
-  margin-left: 15px;
-  font-size: 11px;
-  color: #F68A0B;
-  margin-top: 0;
-  border: 1px solid #CBD5E0;
-  padding: 13px;
-  border-radius: 5px;
-  padding: 8px;
 }
 .ncpi .pi-list-single-button-content button {
   background-color: #fff;
@@ -443,7 +432,7 @@
 }
 .ncpi .pi-accordion-content {
   width: 100%;
-  padding-left: 25px;
+  padding-left: 40px;
   font-size: 11pt;
   color: rgba(0, 0, 0, 0.54);
   display: none;
