--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -892,7 +892,7 @@ html {
   min-width: 210px;
   box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.13);
   z-index: 1;
-  right: -75px;
+  right: -50px;
   top: 45px;
   border-radius: 8px;
 }
@@ -1190,7 +1190,7 @@ html {
   position: relative;
   top: 2px;
 }
-.ncpi .pi-accordion-table-list .pi-dropdown-active {
+.ncpi .pi-accordion-table-list .pi-show {
   text-align: left;
   left: -25px;
 }
@@ -1217,7 +1217,7 @@ html {
 .ncpi .pi-table-three th:nth-child(n+3) {
   text-align: center;
 }
-.ncpi .pi-table-four tbody tr td:nth-child(2) {
+.ncpi .pi-table-four tbody tr td .pi-list-title {
   font-weight: 600;
   color: #2D3748;
 }
@@ -1410,6 +1410,15 @@ html {
   position: relative;
   top: 1px;
 }
+.ncpi .pi-float-right.pi-select-small {
+  border: none;
+  font-size: 14px !important;
+  color: #718096 !important;
+  font-weight: 500;
+  margin-left: 35px;
+  padding: 13px 28px 13px 15px !important;
+  background-position-x: 100% !important;
+}
 .ncpi .pi-cards {
   margin-bottom: 25px;
 }
@@ -1442,6 +1451,41 @@ html {
   font-size: 20px;
   font-weight: bold;
   color: #2D3748;
+}
+.ncpi .pi-cards-two {
+  padding-right: 15px !important;
+}
+.ncpi .pi-cards-two .row .col-lg {
+  padding-right: 0 !important;
+}
+.ncpi .pi-card-contact {
+  background: #fff;
+  padding: 25px 30px 15px 15px;
+  border-radius: 8px;
+}
+.ncpi .pi-card-contact .row .col-lg {
+  padding-right: 0px !important;
+}
+.ncpi .pi-card-contact h3 {
+  margin-bottom: 25px;
+}
+.ncpi .pi-card-contact .pi-card-contact-item {
+  background-color: #F3F5FB;
+  border-radius: 8px;
+  text-align: center;
+  padding: 25px 15px;
+}
+.ncpi .pi-card-contact .pi-card-contact-item h4 {
+  color: #4A5568;
+  font-weight: 700;
+  font-size: 12px;
+}
+.ncpi .pi-card-contact .pi-card-contact-item p {
+  color: #718096;
+  font-size: 10px;
+  margin-top: 0;
+  line-height: 160%;
+  margin-bottom: 15px;
 }
 @media screen and (max-width: 992px) {
   .ncpi .pi-cards .pi-cards-content {
@@ -1738,7 +1782,7 @@ html {
   margin-top: 55px;
   margin-right: -30px;
 }
-.ncpi .pi-dropdown-active {
+.ncpi .pi-show {
   display: block !important;
 }
 .ncpi .pi-action-content {
@@ -3110,10 +3154,10 @@ html {
   left: -60px;
   top: 35px;
 }
-.ncpi .pi-widget button {
+.ncpi .pi-widget .pi-action-content button {
   padding: 0;
 }
-.ncpi .pi-widget button .pi-action-btn {
+.ncpi .pi-widget .pi-action-content button .pi-action-btn {
   height: 22px;
   padding: 1px;
   top: 0px;
@@ -3127,6 +3171,40 @@ html {
 }
 .ncpi .pi-widget .pi-persons-content address {
   font-size: 10px;
+}
+.ncpi .pi-widget-style-two {
+  border-radius: 10px;
+}
+.ncpi .pi-widget-style-two .pi-widget-title {
+  color: #2D3748;
+  font-size: 20px;
+  font-weight: 700;
+}
+.ncpi .pi-widget-style-two button {
+  width: 100%;
+}
+.ncpi .pi-widget-style-two p {
+  margin-top: 15px;
+  margin-bottom: 25px;
+  color: #718096;
+}
+.ncpi .pi-button-group {
+  margin-bottom: 15px;
+  margin-top: 65px;
+}
+.ncpi .pi-button-group .pi-btn {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 25px 20px;
+  text-align: left;
+  font-size: 18px;
+  color: #2D3748 !important;
+  border: 1px solid #dddddda8;
+}
+.ncpi .pi-button-group .pi-btn svg {
+  margin-right: 20px;
+  position: relative;
+  top: 3px;
 }
 .ncpi .pi-info-box address {
   font-style: normal;
@@ -3280,6 +3358,9 @@ html {
 }
 .ncpi .pi-mt-15 {
   margin-top: 15px;
+}
+.ncpi .pi-mt-10 {
+  margin-top: 10px;
 }
 .ncpi .pi-mt-25 {
   margin-top: 25px;
@@ -3459,6 +3540,11 @@ body {
     font-weight: 700;
   }
 }
+.ncpi .pi-title-medium {
+  font-size: 24px;
+  color: #2D3748;
+  font-weight: 500;
+}
 .ncpi .pi-title-small {
   font-size: 16px;
   font-weight: 500;
@@ -3508,6 +3594,7 @@ body {
   border: none;
   font-size: 14px;
   display: inline-block;
+  border: 1px solid #dddddda8;
 }
 .ncpi .pi-btn svg {
   margin-right: 5px;
