changed some component

--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -268,3 +268,8 @@ input:checked+.pi-switch-slider:before {
         box-shadow: none;
     }
 }
+
+.pi-deal-content {
+    max-width: none !important; 
+    // overflow-x: scroll;
+}
