--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -1,12 +1,14 @@
 .ncpi .pi-list-single-head {
   background-color: #fff;
   padding: 30px;
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   border-radius: 8px 8px 0 0;
 }
+
 .ncpi .pi-list-single-head .pi-list-content {
   display: flex;
 }
+
 .ncpi .pi-list-single-head .pi-list-content h3 {
   font-size: 24px;
   font-weight: 500;
@@ -14,61 +16,76 @@
   margin-bottom: 5px;
   display: inline-flex;
 }
+
 .ncpi .pi-list-single-head .pi-list-content h3 .pi-btn {
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   margin-left: 20px;
   margin-bottom: 10px;
   font-size: 10px;
   margin-top: 4px;
 }
+
 .ncpi .pi-list-single-head .pi-list-content .logo {
   width: 90px;
   height: 90px;
   margin-right: 15px;
   border-radius: 8px;
 }
+
 .ncpi .pi-list-single-head .pi-list-content .pi-lead-address address {
   font-style: normal;
   font-size: 12px;
   color: #718096;
 }
+
 .ncpi .pi-list-single-head .pi-edit-btn {
   text-align: right;
   display: block;
 }
+
 .ncpi .pi-list-single-head .pi-edit-btn .pi-btn {
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   padding: 5px 12px !important;
 }
+
 .ncpi .pi-list-single-head-two {
   padding: 30px 30px 20px;
 }
+
 .ncpi .pi-list-single-head-two .pi-list-content {
   display: block;
 }
+
 .ncpi .pi-list-single-head-two .pi-avatar-content {
   padding: 0;
 }
+
 .ncpi .pi-list-single-button-content {
   float: right;
 }
+
 .ncpi .pi-list-single-button-content .pi-btn-medium.pi-bg-stroke {
   padding: 8px 15px !important;
 }
+
 .ncpi .pi-list-single-button-content .pi-btn-medium.pi-bg-stroke.pi-invite {
   padding: 10px 15px !important;
 }
+
 .ncpi .pi-list-single-button-content .pi-btn-medium.pi-bg-blue {
   padding: 11px 15px !important;
 }
+
 .ncpi .pi-list-single-button-content .pi-select {
   margin-bottom: 30px;
   text-align: right;
 }
+
 .ncpi .pi-list-single-button-content .pi-select label {
   font-size: 12px;
   color: #425466;
 }
+
 .ncpi .pi-list-single-button-content button {
   background-color: #fff;
   color: #4A5568;
@@ -76,76 +93,92 @@
   border-radius: 4px;
   line-height: 15px;
 }
+
 .ncpi .pi-list-single-button-content button img {
   position: relative;
   top: 2px;
   left: -3px;
 }
+
 .ncpi .pi-list-single-button-content .pi-action-btn {
   top: 6px;
   padding: 5px 0px;
 }
+
 .ncpi .pi-list-single-button-content .pi-action-btn button {
   border: none;
   margin-left: 0;
 }
+
 .ncpi .pi-list-single-button-content .pi-action-btn .pi-dropdown-content {
   margin-top: 3px;
   left: -70px;
 }
+
 .ncpi .pi-tag-content {
   padding: 30px;
   background-color: #fff;
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   border-top: none;
   border-radius: 0 0 8px 8px;
 }
+
 .ncpi .pi-tag-content .pi-budget span {
   color: #718096;
   font-size: 13px;
   font-weight: 500;
 }
+
 .ncpi .pi-tag-content .pi-badge:hover {
   border-radius: 5px 0 0 5px;
 }
+
 .ncpi .pi-tag-content .pi-badge:hover b {
   display: block;
 }
+
 .ncpi .pi-tag-content .pi-badge b:hover {
   cursor: pointer;
 }
+
 .ncpi .pi-tag-content .pi-badge {
   position: relative;
   padding: 5px 6px 5px 10px;
 }
+
 .ncpi .pi-tag-content .pi-badge b {
   color: #fff;
   position: absolute;
-  right: -16px;
-  background: #123DEE;
+  right: 0;
+  background: #f16063;
   padding: 1px 5px;
-  border-radius: 0 15px 15px 0;
+  border-radius: 0 5px 5px 0;
   display: none;
   top: 0;
   z-index: 9;
 }
+
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content {
     display: inline-block;
   }
 }
+
 .ncpi .pi-tag-content ul {
   display: flex;
   margin: 0;
 }
+
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content ul {
     display: inherit;
   }
 }
+
 .ncpi .pi-tag-content ul li {
   margin-right: 40px;
 }
+
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content ul li {
     width: 50%;
@@ -154,25 +187,30 @@
     margin-bottom: 15px;
   }
 }
+
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content ul li {
     width: 100%;
   }
+
   .ncpi .pi-tag-content ul li:last-child {
     margin-bottom: 0;
   }
 }
+
 .ncpi .pi-tag-content ul li span {
   margin-right: 5px;
 }
+
 .ncpi .pi-tag-content ul li .pi-date {
   margin-left: 5px;
   color: #4a5568;
   font-weight: 500;
   font-size: 12px;
 }
+
 .ncpi .pi-tag-content ul select {
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   font-weight: 500;
   color: #4A5568;
   outline: none;
@@ -181,21 +219,25 @@
   border-radius: 4px;
   margin-left: 3px;
 }
+
 .ncpi .pi-tag-content ul label {
   font-size: 12px;
   margin-right: 3px;
   color: #718096;
 }
+
 .ncpi .pi-tab-buttons-group {
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   padding: 5px 10px 10px;
   border-radius: 8px;
   background-color: #fff;
   text-align: right;
 }
+
 .ncpi .pi-tab-buttons-group .pi-activity-field {
   text-align: left;
 }
+
 .ncpi .pi-tab-buttons-group .pi-activity-field input {
   font-size: 12px;
   color: #718096;
@@ -205,18 +247,22 @@
   padding: 7px 0;
   width: 100%;
 }
+
 .ncpi .pi-tab-buttons-group .pi-activity-field input:focus {
   outline: none;
   box-shadow: none;
 }
+
 .ncpi .pi-tab-buttons-group button:last-child {
   border: none;
   position: relative;
   top: -4px;
 }
+
 .ncpi .pi-tab-buttons-group button:last-child {
   width: auto;
 }
+
 .ncpi .pi-tab-buttons-group button {
   background: transparent;
   border: 1px solid;
@@ -228,16 +274,20 @@
   border-style: dashed;
   width: 32px;
 }
+
 .ncpi .pi-small-button-group .pi-btn-small {
   color: #718096 !important;
   font-weight: 500;
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   margin-right: 5px;
 }
-.ncpi .pi-small-button-group .pi-btn-small.pi-active, .ncpi .pi-small-button-group .pi-btn-small:hover {
+
+.ncpi .pi-small-button-group .pi-btn-small.pi-active,
+.ncpi .pi-small-button-group .pi-btn-small:hover {
   color: #2D3748 !important;
   box-shadow: 0px 4.95074px 6.60099px rgba(0, 0, 0, 0.07) !important;
 }
+
 .ncpi .pi-small-button-group .pi-buttons-right .pi-btn-small {
   width: 30px;
   line-height: 100%;
@@ -245,44 +295,56 @@
   padding: 5px 4px !important;
   border-radius: 5px;
 }
+
 .ncpi .pi-small-button-group .pi-buttons-right .pi-t-1 {
   position: relative;
   top: -1px;
 }
+
 .ncpi .pi-small-button-group-two svg {
   vertical-align: middle;
 }
+
 .ncpi .pi-small-button-group-two h3 {
   margin-top: 18px;
 }
+
 .ncpi .pi-small-button-group-two .pi-btn-medium {
   margin-bottom: 25px;
   margin-left: 5px;
 }
+
 .ncpi .pi-small-button-group-two .pi-btn-small svg {
   margin-right: 0;
 }
+
 .ncpi .pi-small-button-group-two .pi-btn {
   color: #718096;
 }
+
 .ncpi .pi-px-25 {
   padding: 35px 25px 0 !important;
 }
+
 .ncpi .pi-board {
   display: flex;
   margin-top: 30px;
 }
+
 .ncpi .pi-board-column {
   margin-right: 20px;
 }
+
 .ncpi .pi-board-column .pi-btn {
   width: 100%;
   margin-bottom: 15px;
   border-radius: 5px;
 }
+
 .ncpi .pi-board-column:last-child {
   margin-right: 0;
 }
+
 .ncpi .pi-board-column .pi-board-column-title {
   background: #fff;
   padding: 18px 10px 7px 20px;
@@ -290,11 +352,13 @@
   display: flex;
   position: relative;
 }
+
 .ncpi .pi-board-column .pi-board-column-title h4 {
   font-size: 14px;
   font-weight: 500;
   line-height: 130%;
 }
+
 .ncpi .pi-board-column .pi-board-column-title:before {
   position: absolute;
   top: 20px;
@@ -306,23 +370,28 @@
   border-top: 7px solid transparent;
   border-bottom: 7px solid transparent;
 }
+
 .ncpi .pi-board-column .pi-action-content {
   margin-left: auto;
 }
+
 .ncpi .pi-board-column .pi-action-content button {
   top: -3px;
   position: relative;
 }
+
 .ncpi .pi-board-column .pi-action-content .pi-dropdown-content {
   top: 39px;
   left: -65px;
 }
+
 .ncpi .pi-board-column .pi-board-column-item {
   background-color: #fff;
-  border: 1px solid #dddddda8;
+  border: 1px solid rgba(221, 221, 221, 0.6588235294);
   border-radius: 8px;
   margin-bottom: 15px;
 }
+
 .ncpi .pi-board-column .pi-board-column-item .pi-badge {
   float: right;
   position: absolute;
@@ -330,100 +399,123 @@
   top: 47%;
   border-radius: 8px 0 0 8px;
 }
+
 .ncpi .pi-board-column .pi-board-column-item .pi-board-item-top {
   padding: 15px;
-  border-bottom: 1px solid #dddddda8;
+  border-bottom: 1px solid rgba(221, 221, 221, 0.6588235294);
   position: relative;
 }
+
 .ncpi .pi-board-column .pi-board-column-item .pi-board-item-top h4 {
   font-size: 14px;
   font-weight: 500;
   line-height: 130%;
   margin-bottom: 5px;
 }
+
 .ncpi .pi-board-column .pi-board-column-item .pi-board-item-top p {
   margin: 0px;
 }
+
 .ncpi .pi-board-column .pi-board-column-item .pi-board-item-top span,
 .ncpi .pi-board-column .pi-board-column-item .pi-board-item-top p {
   font-size: 12px;
   color: #718096;
 }
+
 .ncpi .pi-avatar-content {
   padding: 10px 15px;
   display: flex;
 }
+
 .ncpi .pi-avatar-content img {
   width: 37px;
   height: 38px;
 }
+
 .ncpi .pi-avatar-content .pi-avatar-text {
   margin-left: 8px;
 }
+
 .ncpi .pi-avatar-content .pi-avatar-text h5 {
   line-height: 140%;
   color: #2D3748;
   font-weight: 500;
 }
+
 .ncpi .pi-avatar-content .pi-avatar-text p {
   color: #425466;
 }
+
 .ncpi .pi-avatar-content .pi-avatar-text p,
 .ncpi .pi-avatar-content .pi-avatar-text h5 {
   margin: 0;
   font-size: 12px;
 }
-.ncpi .pi-broad-content {
+
+.ncpi .pi-board-content {
   width: 235px;
   padding: 15px 10px;
   width: 235px;
 }
+
 .ncpi .pi-note {
   display: flex;
   margin-bottom: 10px;
   position: relative;
 }
+
 .ncpi .pi-note .pi-dropdown-content {
   top: 35px;
   left: -70px;
 }
+
 .ncpi .pi-note .pi-action-content {
   position: absolute;
   right: 0;
 }
+
 .ncpi .pi-note .pi-avater {
   width: 40px;
   height: 40px;
   margin-right: 15px;
 }
+
 .ncpi .pi-note .pi-note-text {
   width: 90%;
 }
+
 .ncpi .pi-note h4 {
   font-size: 14px;
   font-weight: 600;
   margin-top: 7px;
 }
+
 .ncpi .pi-note h4 span {
   color: #A0AEC0;
   margin-left: 25px;
 }
+
 .ncpi .pi-note p {
   margin-top: 10px;
   color: #4A5568;
 }
+
 .ncpi .pi-accordion {
   margin-top: 15px;
 }
+
 .ncpi .pi-accordion input[type=radio] {
   display: none;
 }
+
 .ncpi .pi-accordion-table {
   position: relative;
   background: white;
   height: 64px;
   transition: all 0.15s ease-in-out;
 }
+
 .ncpi .pi-accordion-table b {
   background-color: #EDF2F7;
   padding: 7px 12px;
@@ -432,6 +524,7 @@
   font-weight: 600;
   font-size: 12px;
 }
+
 .ncpi .pi-accordion-table .pi-down-angle {
   width: 15px;
   height: 15px;
@@ -442,6 +535,7 @@
   margin-right: 10px;
   box-shadow: 0px 4.95074px 6.60099px rgba(0, 0, 0, 0.07);
 }
+
 .ncpi .pi-accordion-table .pi-down-angle svg {
   position: relative;
   left: 2px;
@@ -449,6 +543,7 @@
   top: -2px;
   transition: all 0.3s ease-out;
 }
+
 .ncpi .pi-accordion-title {
   width: 100%;
   padding: 15px 0;
@@ -460,6 +555,7 @@
   -ms-user-select: none;
   user-select: none;
 }
+
 .ncpi .pi-accordion-content {
   width: 100%;
   padding-left: 40px;
@@ -467,6 +563,7 @@
   color: rgba(0, 0, 0, 0.54);
   display: none;
 }
+
 .ncpi .pi-table-close {
   position: absolute;
   height: 64px;
@@ -476,13 +573,16 @@
   cursor: pointer;
   display: none;
 }
-.ncpi input:checked + .pi-accordion-table {
+
+.ncpi input:checked+.pi-accordion-table {
   height: auto;
 }
-.ncpi input:checked + .pi-accordion-table .pi-accordion-content,
-.ncpi input:checked + .pi-accordion-table .pi-table-close {
+
+.ncpi input:checked+.pi-accordion-table .pi-accordion-content,
+.ncpi input:checked+.pi-accordion-table .pi-table-close {
   display: inline-block;
 }
-.ncpi input:checked + section.pi-accordion-table .pi-accordion-title span svg {
+
+.ncpi input:checked+section.pi-accordion-table .pi-accordion-title span svg {
   transform: rotate(0deg);
 }
