task single alot of issues fixed

--- a/src/admin/js/react/blocks/field/taxonomy/Items.module.scss
+++ b/src/admin/js/react/blocks/field/taxonomy/Items.module.scss
@@ -1,6 +1,6 @@
 .listDraggingOver {
-  background: #ddd;
-  background-image: repeating-linear-gradient(30deg, rgba(#FFF, .2), rgba(#FFF, .2) 30px, transparent 0, transparent 60px);
+  background: #dfdfdf;
+  background-image: repeating-linear-gradient(30deg, rgba(#FFF, .8), rgba(#FFF, .8) 30px, transparent 0, transparent 60px);
 }
 .listItem {
   background: #fff;
