--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -824,9 +824,6 @@ html {
   text-align: left;
   border-color: #EDF2F7;
 }
-.ncpi .pi-table tr th:nth-child(4n) svg {
-  top: 1px;
-}
 .ncpi .pi-table tr th {
   font-weight: 600;
   font-size: 10px;
@@ -1078,6 +1075,9 @@ html {
   border-spacing: 0;
   width: 100%;
 }
+.ncpi .pi-info-table-content .pi-info-table thead tr th:first-child {
+  width: 40%;
+}
 .ncpi .pi-info-table-content .pi-info-table textarea {
   border-radius: 5px;
   margin-top: 10px;
@@ -1085,19 +1085,10 @@ html {
   border: 1px solid #ddd;
   padding: 10px;
   width: 100%;
+  color: #718096;
 }
 .ncpi .pi-info-table-content .pi-info-table thead tr th:nth-child(3) {
   padding: 10px 20px;
-}
-.ncpi .pi-info-table-content .pi-info-table thead tr th {
-  text-align: left;
-  border-top: 1px solid #cbd5e0;
-  border-bottom: 1px solid #cbd5e0;
-  font-size: 14px;
-  line-height: 20px;
-}
-.ncpi .pi-info-table-content .pi-info-table thead tr {
-  background-color: #f8f8f8;
 }
 .ncpi .pi-info-table-content .pi-info-table thead tr th span {
   font-size: 10px;
@@ -1105,11 +1096,6 @@ html {
 }
 .ncpi .pi-info-table-content .pi-info-table thead tr th:first-child {
   padding: 14px 20px;
-  border-left: 1px solid #cbd5e0;
-  border-radius: 15px 0 0 0;
-}
-.ncpi .pi-info-table-content .pi-info-table thead tr th:last-child {
-  border-right: 1px solid #cbd5e0;
 }
 .ncpi .pi-info-table-content .pi-info-table tbody tr td {
   width: 140px;
@@ -1128,12 +1114,6 @@ html {
 .ncpi .pi-info-table-content .pi-info-table tbody tr td:nth-child(3) input[type=number] {
   width: 100px;
 }
-.ncpi .pi-info-table-content .pi-info-table tbody tr td:first-child {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 15px 20px;
-}
 .ncpi .pi-info-table-content .pi-info-table td:first-child input[type=text] {
   width: 100%;
 }
@@ -1143,7 +1123,7 @@ html {
 .ncpi .pi-info-table-content .pi-info-table td input[type=number],
 .ncpi .pi-info-table-content .pi-info-table td input[type=text] {
   width: 68px;
-  padding: 6px 8px;
+  padding: 10px 8px;
   border: 1px solid #cbd5e0;
   border-radius: 4px;
   background-color: #fff;
@@ -1161,7 +1141,7 @@ html {
   font-size: 10px;
   margin-left: -6px;
   outline: none;
-  padding: 6px 8px 6px;
+  padding: 12px 8px;
   position: relative;
   top: -1px;
   width: 65px;
@@ -2052,7 +2032,7 @@ html {
 .ncpi .pi-show {
   visibility: visible;
   opacity: 1;
-  z-index: 99;
+  z-index: 9;
 }
 .ncpi .pi-overlay {
   visibility: visible;
@@ -2175,6 +2155,47 @@ html {
     width: 70%;
   }
 }
+.ncpi .pi-modal-style-two .pi-modal-header {
+  padding: 20px 30px 20px;
+  background: transparent;
+  border-bottom: 1px solid rgba(221, 221, 221, 0.6588235294);
+}
+.ncpi .pi-modal-style-two .pi-modal-header .pi-modal-title {
+  font-size: 16px;
+  font-weight: 600;
+}
+.ncpi .pi-modal-style-two .pi-content {
+  padding: 25px 30px 0px;
+}
+.ncpi .pi-modal-style-two .pi-modal-footer {
+  padding: 0 30px 30px;
+}
+.ncpi .pi-modal-style-two .pi-close {
+  background: none;
+  top: 50%;
+  right: 15px;
+}
+.ncpi .pi-modal-style-two .pi-color-white {
+  border-radius: 4px !important;
+  padding: 10px 25px !important;
+}
+.ncpi .pi-field-color-picker {
+  display: flex;
+}
+.ncpi .pi-field-color-picker span:last-child,
+.ncpi .pi-field-color-picker span:first-child {
+  padding: 4px;
+  border-radius: 4px;
+}
+.ncpi .pi-field-color-picker span {
+  background: #f16063;
+  width: 32px;
+  height: 32px;
+  display: inline-block;
+  border-radius: 8px;
+  margin-right: 10px;
+  cursor: pointer;
+}
 .ncpi .pi-field-copy {
   position: relative;
 }
@@ -2267,14 +2288,18 @@ html {
 .ncpi .pi-modal-sidebar-two {
   width: 760px;
 }
-.ncpi .pi-modal-sidebar-two .pi-modal-header .pi-btn-small {
+.ncpi .pi-modal-sidebar-two .pi-modal-header .pi-action-content {
+  display: inline;
+}
+.ncpi .pi-modal-sidebar-two .pi-modal-header .pi-action-content .pi-btn-small {
   color: #F68A0B;
   background-color: #FFF5E9;
   border-radius: 0;
   border: none;
-  font-size: 14px;
+  font-size: 12px;
   padding: 6px 14px !important;
   border-radius: 5px;
+  font-weight: 700;
 }
 .ncpi .pi-modal-sidebar-two .pi-modal-header .pi-btn-medium {
   background: #16B21D;
@@ -2671,26 +2696,13 @@ html {
   left: 11px;
 }
 .ncpi .pi-edit-content label {
-  font-size: 14px;
-  margin-bottom: 10px;
-  color: #718096;
-  display: block;
+  font-size: 16px;
+  font-weight: 500;
+  color: #1A202C;
 }
-.ncpi .pi-edit-content .pi-edit-text {
-  margin-top: 20px;
-}
-.ncpi .pi-edit-content .pi-edit-text h4 {
-  margin-bottom: -15px;
-}
-.ncpi .pi-edit-content span {
-  width: 32px;
-  height: 32px;
-  display: inline-block;
+.ncpi .pi-edit-content span:last-child,
+.ncpi .pi-edit-content span:first-child {
   border-radius: 8px;
-  margin-right: 7px;
-  cursor: pointer;
-  box-shadow: none !important;
-  margin-bottom: 5px;
 }
 .ncpi [data-tab-content] {
   display: none;
@@ -2986,38 +2998,38 @@ html {
   margin-top: 5px;
 }
 
-.pi-accordion-wrapper .pi-form-style-two .pi-btn {
-  width: 100%;
-  padding: 12px 20px;
-  margin-top: 25px;
-  border-radius: 5px;
-  font-size: 12px;
-}
-
-.ncpi .pi-select {
+.ncpi .pi-field-radio,
+.ncpi .pi-field-checkbox {
   display: flex;
 }
-.ncpi .pi-select input[type=radio],
-.ncpi .pi-select input[type=checkbox] {
+.ncpi .pi-field-radio input[type=radio],
+.ncpi .pi-field-radio input[type=checkbox],
+.ncpi .pi-field-checkbox input[type=radio],
+.ncpi .pi-field-checkbox input[type=checkbox] {
   margin-right: 10px;
   position: relative;
   top: 2px;
   zoom: 1.2;
 }
-.ncpi .pi-select label {
+.ncpi .pi-field-radio label,
+.ncpi .pi-field-checkbox label {
   font-weight: 500;
 }
-.ncpi .pi-reminder-time input[type=radio],
-.ncpi .pi-reminder-time input[type=checkbox] {
+.ncpi .pi-field-radio-input input[type=radio],
+.ncpi .pi-field-radio-input input[type=checkbox],
+.ncpi .pi-field-checkbox-input input[type=radio],
+.ncpi .pi-field-checkbox-input input[type=checkbox] {
   position: relative;
   top: 8px !important;
 }
-.ncpi .pi-reminder-time input[type=number] {
+.ncpi .pi-field-radio-input input[type=number],
+.ncpi .pi-field-checkbox-input input[type=number] {
   width: 65px !important;
   padding: 7px 0 7px 6px !important;
   border-radius: 4px 0 0 4px !important;
 }
-.ncpi .pi-reminder-time select {
+.ncpi .pi-field-radio-input select,
+.ncpi .pi-field-checkbox-input select {
   width: 65px !important;
   margin-left: -1px;
   padding: 8px 0 6px 6px !important;
@@ -3025,10 +3037,8 @@ html {
   border-radius: 0px 4px 4px 0 !important;
   background: #F7FAFC;
 }
-.ncpi .pi-reminder p {
-  color: #718096;
+.ncpi .pi-reminder .pi-form-style-one .row:last-child > div {
   margin-bottom: 10px;
-  margin-top: 0;
 }
 .ncpi .pi-reminder .pi-btn {
   color: #718096;
@@ -3039,7 +3049,7 @@ html {
 }
 .ncpi .pi-switch-style-two {
   display: flex;
-  margin-top: 30px;
+  margin-top: 15px;
 }
 .ncpi .pi-switch-style-two .pi-copy {
   margin-right: 20px;
@@ -3211,7 +3221,7 @@ html {
   color: #718096;
   font-size: 14px;
   font-weight: 500;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 .ncpi .pi-field-repeater .row > div {
   margin-bottom: 0px !important;
@@ -3220,7 +3230,7 @@ html {
   margin-bottom: 0px;
 }
 .ncpi .pi-field-repeater ul li {
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
   border: 1px solid #e2e8f0;
   padding: 10px 10px 10px 0px;
   border-radius: 8px;
@@ -3235,7 +3245,7 @@ html {
   cursor: pointer;
 }
 .ncpi .pi-field-repeater ul li .pi-dot-list {
-  cursor: pointer;
+  cursor: move;
   padding: 5px;
 }
 .ncpi .pi-field-repeater .pi-btn {
@@ -3557,6 +3567,14 @@ html {
   position: relative !important;
   top: 4px !important;
 }
+.ncpi .pi-mt-8 {
+  position: relative !important;
+  top: 8px !important;
+}
+.ncpi .pi-mt-m-4 {
+  position: relative !important;
+  top: -4px !important;
+}
 .ncpi .pi-mt-1 {
   position: relative !important;
   top: 1px !important;
@@ -3613,6 +3631,9 @@ html {
 .ncpi .pi-margin-l-r {
   margin-right: -10px;
   margin-left: -10px;
+}
+.ncpi .pi-border-0 {
+  border: 0 !important;
 }
 .ncpi .pi-gradient {
   background: linear-gradient(to bottom, #ffffff6b 0%, #00000004 100%);
